--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,37 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Stall",
+  "short_name": "Stall",
+  "description": "Stall your morden point of sell",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./favicon/android-chrome_144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "./favicon/android-chrome_48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
+      "src": "./favicon/android-chrome_192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./favicon/android-chrome_512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "./favicon/maskable_icon.png",
+      "sizes": "196x196",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "maskable"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "start_url": "/app",
+  "theme_color": "#0f172a",
+  "background_color": "#0f172a",
+  "display": "standalone"
 }
