--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "release": "standard-version",
+    "commit": "cz",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,5 +56,9 @@
     "react-router-dom": "^6.4.3",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }}
 }
