--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,7 +31,7 @@
     }
   ],
   "start_url": "/app",
-  "theme_color": "#0f172a",
-  "background_color": "#0f172a",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "display": "standalone"
 }
